# pi-rust

./: CONTRIBUTING.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: basic-ci.yml  benchmark.yml  check.yml  ci-status.yml  ci.yml  coverage.yml  docs.yml  lint.yml  msrv.yml  security.yml  test.yml
.specs/: design.md  requirements.md  tasks.md
pi_rust/: all.html  fn.add.html  index.html  sidebar-items.js
pi_rust/error/: index.html
pi_rust/horizon/: index.html
search.desc/pi_rust/: pi_rust-desc-0-.js
src/: config.rs  errors.rs  lib.rs
src/pi_rust/: error.rs.html  horizon.rs.html  lib.rs.html
src/types/: mod.rs
